@startuml

' Define Enums
enum TransactionType {
  INCOME
  EXPENSE
}

enum TransactionFrequency {
  ONE_TIME
  RECURRING
}

' Define Classes
class Household {
  +UUID id
  +String name
}

class User {
  +UUID id
  +String username
  +String passwordHash
  +Timestamp createdAt
  +Boolean mustChangePassword
}

class Transaction {
  +UUID id
  +TransactionType type
  +TransactionFrequency frequency
  +Decimal amount
  +Date date
  +String description
}

class RecurringTransaction {
  +UUID id
  +TransactionType type
  +TransactionFrequency frequency
  +RecurrenceInterval recurrenceInterval
  +Decimal amount
  +Date startDate
  +Date endDate
  +String description
  +Boolean active
}

class Category {
  +UUID id
  +String name
  +Decimal monthlyBudget
}

class Investment {
  +UUID id
  +String type
  +String ticker
  +Decimal quantity
  +Decimal amountInvested
  +Decimal currentValue
  +Date startDate
  +String notes
  +Timestamp lastSynced
  +Decimal currentPrice
}

class SavingGoal {
  +UUID id
  +String name
  +Decimal targetAmount
  +Decimal currentAmount
  +Date startDate
  +Date endDate
}

' Relationships
Transaction --> RecurringTransaction : recurring_id
Transaction --> Category : category_id
RecurringTransaction --> Category : category_id

' Every user belongs to exactly one household; shared resources are scoped by household,
' not by the individual user - anyone in a household can see and edit anything in it.
' user_id stays on each row as provenance (who added it) but isn't the authorization key.
User --> Household : household_id
Household --> Transaction : household_id
Household --> RecurringTransaction : household_id
Household --> Category : household_id
Household --> Investment : household_id
Household --> SavingGoal : household_id

' Settings is the one exception - it stays personal to each user, not shared.
User --> Transaction : user_id (provenance)
User --> RecurringTransaction : user_id (provenance)
User --> Category : user_id (provenance)
User --> Investment : user_id (provenance)
User --> SavingGoal : user_id (provenance)

@enduml
